# VSF-TTS

./: .gitignore  .gitmodules  CLAUDE.md  GEMINI.md  PIPELINE.md  README.md  Toi_Uu_Hoa_Luong_ASR_SER_Vietnamese.md  implementation_plan.md  requirements-demucs-cu128.txt  requirements-demucs.txt  setup_new_machine.ps1  spakers.txt  task.md
VSF-audio-pipeline/backend/: pyproject.toml  start.sh
VSF-audio-pipeline/backend/alembic/: README  env.py
VSF-audio-pipeline/backend/alembic/versions/: 20260528_000004_add_retry_fields_to_pipeline_jobs.py  20260529_000005_create_pipeline_batches_table.py  20260615_000008_add_step_history_to_pipeline_jobs.py  20260616_000009_create_pipeline_stage_timings.py
VSF-audio-pipeline/backend/app/: main.py
VSF-audio-pipeline/backend/app/core/: __init__.py  config.py
VSF-audio-pipeline/backend/app/db/: base.py  session.py
VSF-audio-pipeline/backend/app/modules/: __init__.py  router.py
VSF-audio-pipeline/backend/tests/: test_config_segmentation.py  test_crawl_subtitle_policy.py  test_integration_segment_pipeline.py  test_noise_probe.py  test_normalize_cmd.py  test_pipeline_service_segments.py  test_progress.py  test_review_endpoints.py  test_segment_review_service.py  test_stage_timing.py  test_startup_discovery.py  test_timings_endpoints.py  test_vocal_separation.py
VSF-audio-pipeline/backend/tests/segmentation/: test_aligner.py  test_asr_adapter.py  test_llm_judge.py  test_music_detect.py  test_segment_service.py  test_segment_writer.py  test_sentence_grouper.py  test_text_quality.py  test_types.py  test_vad_local_client.py  (+3 more)
(+371 files in other folders)
