[project]
name = "audio-pipeline-backend"
version = "0.1.0"
description = "FastAPI backend for the VinSmart audio pipeline"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "psycopg[binary]",
    "pydantic-settings",
    "langgraph",
    "langsmith",
    "yt-dlp[default,curl-cffi]",
    "soundfile",
    "PyYAML",
    "python-dotenv",
    "onnxruntime>=1.16.1",
    "pyloudnorm==0.1.1",
    "faster-whisper",
    "numpy",
]

[project.optional-dependencies]
# Demucs vocal separation (heavy: pulls torch). Always-ON in docker image build.
# torch/torchaudio 2.8.0 cu128: hỗ trợ GPU Blackwell (RTX 50xx, sm_120) VÀ vẫn còn
# backend soundfile cho ta.save (>=2.9 ép torchcodec -> lỗi NPP). Xem [tool.uv.sources].
demucs = [
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "demucs>=4.0",
]

# torch/torchaudio lấy từ index CUDA 12.8 của PyTorch (Blackwell cần cu128+).
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
